@@ -182,6 +182,9 @@ def hasExternal(name):
 
 
 def printDetected():
+    sta,out = runCommand('cd %s && svnversion' % pyformex.cfg['pyformexdir'])
+    if sta == 0 and not out.startswith('exported'):
+        pyformex.__revision__ = "$Rev: %s $" % out.strip()
     print "%s (%s)\n" % (pyformex.Version,pyformex.__revision__)
     print "Detected Python Modules:"
     for k,v in the_version.items():
